--- a/geekshop/mainapp/templates/products.html
+++ b/geekshop/mainapp/templates/products.html
@@ -21,15 +21,11 @@
 		{% block content %}
 
 		<div class="details">
+        {% block clearfix %}
 			<div class="links clearfix">
-				<ul class="links-menu">
-					<li><a href="#" class="active">все</a></li>
-					<li><a href="#">дом</a></li>
-					<li><a href="#">офис</a></li>
-					<li><a href="#">модерн</a></li>
-					<li><a href="#">классика</a></li>
-				</ul>
+				{% include 'inc_categories.html' %}
 			</div>
+        {% endblock %}
 
 			<div class="details-products">
 				<div class="details-slider">
