--- a/geekshop/geekshop/templates/index.html
+++ b/geekshop/geekshop/templates/index.html
@@ -33,27 +33,22 @@
 					<a class="active" href="#">Популярные</a><a href="#">Новинки</a>
 			</div>
 			<a class="explore" href="#">показать все <img src="{% static '/img/arrow.png'%}" alt=""></a>
-			<div class="clearfix">
+			{% block clearfix %}
+            <div class="clearfix">
 			</div>
+            {% endblock %}
 			<div class="tab-content">
+                {% for product in products %}
 				<div class="block">
-					<a href="#"><img src="{% static '/img/product-1.jpg'%}" alt="">
+					<a href="#"><img src="/media/{{ product.image }}" width="270" alt="">
 						<div class="text">
 							<img src="{% static '/img/icon-hover.png'%}" alt="img">
-							<h4>Отличный стул</h4>
-							<p>Расположитесь комфортно. </p>
+							<h4>{{ product.name }}</h4>
+							<p>{{ product.short_desc}} </p>
 						</div> 
 					</a>
 				</div>
-				<div class="block">
-					<a href="#"><img src="{% static '/img/product-2.jpg'%}" alt="">
-						<div class="text">
-							<img src="{% static '/img/icon-hover.png'%}" alt="">
-							<h4>Стул повышенного качества</h4>
-							<p>Не оторваться. </p>
-						</div>
-					</a>
-				</div>	
+                {% endfor %}
 			</div>
 		</div>
 		{% endblock %}
