--- a/geekshop/geekshop/templates/inc_menu.html
+++ b/geekshop/geekshop/templates/inc_menu.html
@@ -3,16 +3,29 @@
 <ul class="menu">
 
 {% for link in links %}
-  <li>
-            <a href="{{ link.href }}" class=
-               "{% if request.get_full_path == link.href %}
-                        active
-                      {% endif %}">
-                {{ link.name }}
-            </a>
-        </li>
-
-    {% endfor %}
+    <li>
+        <a href="{{ link.href }}" class=
+           "{% if request.get_full_path == link.href %}
+                    active
+                  {% endif %}">
+            {{ link.name }}
+        </a>
+    </li>
+{% endfor %}
+{% if user.is_authenticated %}
+     <li>
+     <a href="{% url 'auth:edit' %}">
+         {{ user.first_name|default:'Пользователь' }}
+     </a>
+    </li>
+{% endif %}
+<li>
+    {% if user.is_authenticated %}
+        <a href="{% url 'auth:logout' %}">Выйти</a>
+    {% else %}
+        <a href="{% url 'auth:login' %}">Войти</a>
+    {% endif %}
+</li>
 
 </ul>
     <a href="#" class="search"></a>
