prefered for basket

--- a/geekshop/mainapp/templates/inc_categories.html
+++ b/geekshop/mainapp/templates/inc_categories.html
@@ -1,14 +1,21 @@
 <ul class="links-menu">
-{% for category in products_category %}
-  <li>
-            <a href="{{ category.id}}" class=
-               "{% if now_category == category.id %}
+    <li>
+        <a href="{% url 'products:category' 0 %}"
+           class="{% if request.resolver_match.kwargs.pk == 0 %}
+                    active
+                  {% endif %}">
+            все
+        </a>
+    </li>
+
+    {% for link in categories %}
+        <li>
+            <a href="{% url 'products:category' link.pk %}"
+               class="{% if request.resolver_match.kwargs.pk == link.pk %}
                         active
                       {% endif %}">
-                {{ category.name }}
+                {{ link.name }}
             </a>
         </li>
-
     {% endfor %}
 </ul>
-
