prefered for basket

--- a/geekshop/basketapp/templates/basket.html
+++ b/geekshop/basketapp/templates/basket.html
@@ -1,6 +1,10 @@
 {% extends 'index.html' %}
 {% load static %}
-
+{% block slider %}
+		<div class="hero-white">
+			{% include 'inc_menu.html' %}
+		</div>
+		{% endblock %}
 {% block content %}
     {% if user.is_authenticated %}
         <div class="container">
@@ -10,6 +14,8 @@
                 <tr>
                   <th scope="col">#</th>
                   <th scope="col">Продукт</th>
+                    <th scope="col">Количество</th>
+                    <th scope="col">Сумма</th>
                 </tr>
               </thead>
               <tbody>
@@ -17,6 +23,15 @@
                   <tr>
                       <th scope="row">{{ forloop.counter }}</th>
                       <td>{{ item.product }}</td>
+                      <td>{{ item.quantity }}</td>
+                      <td>{%  for i in products   %}
+                              {% if i.pk == item.pk %}
+                                  {% widthratio i.price 1 item.quantity %}
+                              {% endif %}
+                          {% endfor %}
+                      </td>
+
+
                   </tr>
               {% endfor %}
 
