--- a/geekshop/geekshop/static/style.css
+++ b/geekshop/geekshop/static/style.css
@@ -73,12 +73,12 @@ html, body {
 
 .search {
 	display: block;
-	width: 23px;
-	height: 23px;	
+	width: 22px;
+	height: 22px;
 	background-image: url(img/search.png);
-	position: absolute;
+	/*position: absolute;
 	top: 63px;
-	left: 1176px;
+	left: 1176px;*/
 }
 .basket {
 	display: block;
