--- a/geekshop/geekshop/templates/index.html
+++ b/geekshop/geekshop/templates/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
     {% block css %}
     {% endblock %}
+    {% block js %}
+    {% endblock %}
 </head>
 <body>
 	<div class="container">
