--- a/geekshop/authapp/templates/authapp/base.html
+++ b/geekshop/authapp/templates/authapp/base.html
@@ -22,7 +22,7 @@
 <body>
 	<div class="container">
     {% block slider %}
-		<div class="hero">
+		<div class="userhead hero">
 				{% include 'inc_menu.html' %}
 		</div>
 		{% endblock %}
