--- a/geekshop/geekshop/templates/inc_menu.html
+++ b/geekshop/geekshop/templates/inc_menu.html
@@ -19,6 +19,13 @@
                 </a>
             </li>
         {% endif %}
+    {% if user.is_superuser %}
+        <li>
+            <a href="{% url 'admin_staff:users' %}">
+                    админка
+            </a>
+        </li>
+    {% endif %}
             <li>
                 {% if user.is_authenticated %}
                   <a href="{% url 'auth:logout' %}">выйти</a>
