--- a/geekshop/adminapp/templates/adminapp/products.html
+++ b/geekshop/adminapp/templates/adminapp/products.html
@@ -43,7 +43,7 @@
                         </tfoot>
                         <tbody>
                             {% for object in objects %}
-                                <tr>
+                                <tr {% if not object.is_active %} style="opacity: 0.5;" {% endif %}>
                                 <td><img src="/media/{{object.image|default:'products_images/default.jpg'}}"
                                   alt="{{ object.name }}" style="width:50px;">
                                 </td>
@@ -55,6 +55,7 @@
                                 </td>
                                 <td>{{ object.quantity }}</td>
                                 <td>{{ object.price }} руб</td>
+                                     {% if object.is_active %}
                                 <td>
                                   <button type="button" class="btn btn-primary">
                                     <a class="text-white" href={% url 'admin_staff:product_read' object.pk %}>
@@ -76,6 +77,7 @@
                                     </a>
                                   </button>
                                 </td>
+                                {% endif %}
                                 </tr>
                             {% endfor%}
                         </tbody>
