--- a/geekshop/mainapp/templates/products_list.html
+++ b/geekshop/mainapp/templates/products_list.html
@@ -40,6 +40,7 @@
             <h2>
                 Категория: {{ category.name }}
             </h2>
+
             <div class="category-products row">
               {% for product in products %}
                 <div class="block w-25 my-3 mx-3">
@@ -54,6 +55,18 @@
                 </div>
               {% endfor %}
             </div>
+        <div class="paginator">
+            {% if products.has_previous  %}
+            <a href=" {% url 'products:page' category.pk products.previous_page_number %}"> < </a>{% endif %}
+            <span class="current" >
+            страница {{ products.number }} из {{ products.paginator.num_pages }}
+        </span>
+
+            {% if products.has_next %}
+             <a href=" {% url 'products:page' category.pk products.next_page_number %}"> > </a>
+            {% endif %}
+
+        </div>
         {% include 'inc_related.html' %}
 
 		</div>
