--- a/geekshop/adminapp/templates/adminapp/product_delete.html
+++ b/geekshop/adminapp/templates/adminapp/product_delete.html
@@ -4,14 +4,14 @@
 
 {% block content %}
     <div class="row">
-    <p> Осторожно! Вы точно хотите удалть - {{ user.username }} ?</p>
-        <form class="form-horizontal" action="{% url 'admin_staff:user_delete' user.pk %}" method="post" enctype="multipart/form-data">
+    <p> Осторожно! Вы точно хотите удалть {{ product.name }}?</p>
+        <form class="form-horizontal" action="{% url 'admin_staff:product_delete' product.pk %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
             <input class="btn btn-danger m-3" type="submit" value="Удалить">
         </form>
 
-            <a href="{% url 'admin_staff:users' %}" class="m-3">
+            <a href="{% url 'admin_staff:products' product.category.pk %}" class="m-3">
                 <button class="btn btn-round btn-success">
                 Отмена
                 </button>
